Further vital reshuffling. org.neudist.crypto.* and org.neudist.utils.* have been moved to respective areas under org.neuclear.commons org.neuclear.signers.* as well as org.neuclear.passphraseagents have been moved under org.neuclear.commons.crypto as well. Did a bit of work on the Canonicalizer and changed a few other minor bits.

--- a/project.properties
+++ b/project.properties
@@ -19,4 +19,4 @@ maven.repo.central.directory = /home/sites/neuclear.org/public_html/maven
 maven.jar.manifest.extensions.add = false
 #maven.ui.property.file = ui.properties
 maven.repo.remote = http://www.ibiblio.org/maven/,http://dist.codehaus.org/,http://neuclear.org/maven/
-maven.test.skip=true
+maven.test.skip=false
