--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,7 @@
 # -------------------------------------------------------------------
 # P R O J E C T  P R O P E R T I E S
 # -------------------------------------------------------------------
+#maven.test.skip=true
 
 maven.compile.debug = on
 maven.compile.optimize = on
@@ -19,4 +20,3 @@ maven.repo.central.directory = /home/sites/neuclear.org/public_html/maven
 maven.jar.manifest.extensions.add = false
 #maven.ui.property.file = ui.properties
 maven.repo.remote = http://www.ibiblio.org/maven/,http://dist.codehaus.org/,http://old.neuclear.org/maven/
-maven.test.skip=true
