Updated Ledger to support more advanced book information. You can now create a book or fetch a book by doing getBook(String id) on the ledger. You can register a book or upddate an existing one using registerBook() SimpleLedger now works and passes all tests. HibernateLedger has been implemented, but there are a few things that dont work yet.

--- a/project.properties
+++ b/project.properties
@@ -1,7 +1,7 @@
 # -------------------------------------------------------------------
 # P R O J E C T  P R O P E R T I E S
 # -------------------------------------------------------------------
-#maven.test.skip=true
+maven.test.skip=true
 
 maven.compile.debug = on
 maven.compile.optimize = on
